--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 10-03-04: REED: Restructured Castle Loading. Last of the REED_LOADS. [AlexKreuz]
- 09-30-04: Added #jail and #unjail commands. [Tiko]
- 09-29-04: NPC can check accesslevel. [Tsusai]
- 09-29-04: Can now modify accesslevel from server window. [Tsusai]
- 09-29-04: Memo Map retrieval and save done. [Tsusai]
- 09-29-04: Added @doom command to the ALBGM system. Kills all non-GM characters on the server. [Tiko]
- 09-29-04: Removed HP/SP character tab modification.  Just displays. [Tsusai]
- 09-29-04: Stat Tab Account was showing ID instead of name. [Tsusai]
- 09-29-04: Online Tab "Rescue" button added, used to get chars out of bad spots. [Tsusai]
- 09-29-04: Character Stat tab redesigned, shows addditional info and memo map/points. [Tsusai]
- 09-28-04: Ban is now a boolean. [Tsusai]
- 09-28-04: Prevented problem with sending a server->chara pm when none selected. [Tsusai]
- 09-28-04: Bugs in account creation algorithm. Updated all account creation methods. [AlexKreuz]
- 09-27-04: Can now kickban an online user from the server. [Tsusai].
- 09-27-04: REED: Abnormally missing database files crashed server. [AlexKreuz]
- 09-27-04: REED: Server crash when gamedata inventories contains unknown item. [AlexKreuz]
- 09-27-04: Fixed 100% CPU usage on player ALT-F4 disconnect. Infinite loop. [AlexKreuz]
- 09-27-04: Commented out Map unloading. Not working properly. [AlexKreuz]
- 09-27-04: Commented out PVP Calculations. Causes too many fatal problems. [AlexKreuz]
- 09-27-04: REED: Corruption of guild storage caused load error. [AlexKreuz]
- 09-27-04: #146: Can not exit chat room if multple users in it. [AlexKreuz]
- 09-27-04: Optimized memory clearing procedures. [AlexKreuz]
- 09-25-04: Corrected a mistake on INI. [Tsusai]
- 09-25-04: Uncommented Darkhelemet's MapUnload. [Tsusai]