@@ -24,6 +24,7 @@ uses
   REED_LOAD_PARTIES in 'DATABASE\REED_LOAD_PARTIES.pas',
   REED_LOAD_GUILDS in 'DATABASE\REED_LOAD_GUILDS.pas',
   REED_LOAD_CASTLES in 'DATABASE\REED_LOAD_CASTLES.pas',
+  REED_SAVE_ACCOUNTS in 'DATABASE\REED_SAVE_ACCOUNTS.pas',
   FusionSQL in 'SQL\FusionSQL.pas',
   SQLData in 'SQL\SQLData.pas',
 
